# Collection

./: build.gradle  gradle.properties
app/: CMakeLists.txt  and_res_guard.gradle  app-release.apk  build.gradle  collection.jks  proguard-keys.txt  proguard-rules.pro
app/src/androidTest/java/com/myself/collection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myself/collection/: MyApplication.java  TestMain.java
app/src/main/java/com/myself/collection/activity/: MainActivity.java
app/src/main/java/com/myself/collection/dao/: IpData.java  IpModel.java  RequestParam.java
app/src/main/java/com/myself/collection/http/: HttpClientUtil.java  HttpUrlConnectionUtil.java
app/src/main/java/com/myself/collection/joggle/: IpService.java
app/src/main/java/com/myself/collection/sqlite/: BaseDao.java  BaseDaoFactory.java  IBaseDao.java
app/src/main/java/com/myself/collection/sqlite/annotation/: DBField.java  DBTable.java
app/src/main/java/com/myself/collection/sqlite/entity/: Person.java
app/src/main/java/com/myself/collection/utils/: CrashHandler.java  GenerateValueFiles.java  SignatureValidation.java  WebServiceUtils.java
app/src/main/java/com/myself/collection/utils/fileup/: BitmapCompressionUtil.java  FileCompressionUtil.java
app/src/main/jni/: cn_wjdiankong_encryptdemo_MainActivity.h  encrypt.c  encrypt.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/myself/collection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
